syntax = "proto3";
package users;

service UsersService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHi (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}